refactor: Story 전체 조회 시 좋아요 여부 확인 로직 개선
* Story 목록 조회 시 반복되는 좋아요 여부 단건 쿼리를 벌크 IN 쿼리로 변경